--- a/bonus-discord-bootstrap-remake/css/style.css
+++ b/bonus-discord-bootstrap-remake/css/style.css
@@ -7,6 +7,7 @@
             background-color: white;
             color: black;
             border-radius: 25px;
+            padding: .6rem 1rem;
         }
         --ly-text-light:white;
         --ly-text-dark:black;
@@ -17,9 +18,16 @@
         --ly-footer-bg-color: #24272A;
         --ly-text-brand: #7688D4;
     /* #endregion color variables */
-    }
+}
 
-    .my-container {
-        width: 65%;
-    }
+.my-container {
+    width: 65%;
+}
+
+.my-container-small {
+    height: 290px;
+    line-height: 2rem;
+    width: 50%;
+    margin: 0 auto;
+}
 
