Refactor button styles and update jumbotron layout for improved aesthetics in index.html and style.css

--- a/bonus-discord-bootstrap-remake/css/style.css
+++ b/bonus-discord-bootstrap-remake/css/style.css
@@ -5,9 +5,6 @@
         }
         .btn-primary {
             background-color: white;
-            color: black;
-            border-radius: 25px;
-            padding: .6rem 1rem;
         }
         --ly-text-light:white;
         --ly-text-dark:black;
@@ -24,10 +21,8 @@
     width: 65%;
 }
 
-.my-container-small {
-    height: 290px;
+.my-container-sm {
     line-height: 2rem;
-    width: 50%;
+    width: 44%;
     margin: 0 auto;
 }
-
