Refactor header styling by removing redundant class and adjusting background color in index.html and style.css

--- a/bonus-discord-bootstrap-remake/css/style.css
+++ b/bonus-discord-bootstrap-remake/css/style.css
@@ -1,16 +1,13 @@
-:root {
-    /* #region color variables */
-        .bg-primary {
-            background-color: #3D60D8;
-        }
-        .btn-primary {
-            background-color: white;
-        }
+.btn-primary {
+    background-color: white;
+}
 
-        .btn-secondary {
-            background-color: #92A0DC;
-        }
-    /* #endregion color variables */
+.btn-secondary {
+    background-color: #92A0DC;
+}
+
+header {
+    background-color: #3D60D8;
 }
 
 body {
